Postgres repositories (#3)
* Postgres reservations repository

* Postgres catalog repository

---------

Co-authored-by: Nesquiko <lukas.castven@gmail.com>